[project]
name = "abstract-power-supply-system-dag"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "xiechao06", email = "xiechao06@gmail.com" }
]
dependencies = [
    "pytest>=7.4.2",
]
readme = "README.md"
requires-python = ">= 3.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
