[project]
name = "apssdag"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "xiechao06", email = "xiechao06@gmail.com" }
]
dependencies = [
    "pytest>=7.4.2",
    "typing-extensions>=4.7.1",
    "pdoc>=13.1.1",
]
readme = "README.md"
requires-python = ">= 3.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
extend-exclude = ["temp.py"]

[tool.pytest.ini_options]
addopts = "-s"
